Minor CSS fixes.Remove scroll-behavior css, since layout breaks in firefox on opening select dropdown. Add js smooth scrolling.

--- a/funnel/static/sass/_layout.scss
+++ b/funnel/static/sass/_layout.scss
@@ -1,7 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
-
 .zero-bottom-margin {
   margin-bottom: 0;
 }
